--- a/registration.html
+++ b/registration.html
@@ -41,7 +41,7 @@
                 <option>India</option>
                 <option>Srilanka</option>
                 <option>Pakistan</option>
-                <option>Nepal</option>
+                <option selected>Nepal</option>
                 <option>Bangladesh</option>
                 <option>Canada</option>
                 <option>USA</option>
