css basic selectors and boxmodel

--- a/registration.html
+++ b/registration.html
@@ -1,43 +1,57 @@
 <html>
     <body>
-        <form>
+        <!-- 
+            GET
+            POST
+            PUT
+            DELETE
+         -->
+        <form action="http://itsmywish.com/anb.jsp" method="post" enctype="multipart/form-data">
+            <input type="file" name="resume" id="">
             <label>Enter Firstname</label>
             <br>
-            <input type="text">
+            <input type="text" name="firstname">
             <br>
             <br>
             <label>Enter Lastname</label>
             <br>
-            <input type="text">
+            <input type="text" name="lastname">
             <br>
             <br>
             <label>Enter Password</label>
             <br>
-            <input type="text">
+            <input type="text" name="pwd">
             <br>
             <br>
             <label>Confirm Password</label>
             <br>
-            <input type="text">
+            <input type="text" name="cpwd">
             <br>
             <br>
             <label>Gender</label>
             <br>
-            <input type="radio">:Male &nbsp;&nbsp;&nbsp;
-            <input type="radio">:Female &nbsp;&nbsp;&nbsp;
-            <input type="radio">:others &nbsp;&nbsp;&nbsp;
+            <input type="radio" name="gender" value="male">:Male &nbsp;&nbsp;&nbsp;
+            <input type="radio" name="gender" value="female">:Female &nbsp;&nbsp;&nbsp;
+            <input type="radio" name="gender" value="others">:others &nbsp;&nbsp;&nbsp;
+            <br>
+            <br>
+            <label>Marital Status:</label>
+            <br>
+            <input type="radio" name="maritalstatus" value="married">:Married &nbsp;&nbsp;&nbsp;
+            <input type="radio" name="maritalstatus" value="unmarried">:Unmarried &nbsp;&nbsp;&nbsp;
+            <input type="radio" name="maritalstatus" value="single">:Single &nbsp;&nbsp;&nbsp;
             <br>
             <br>
             <label>Intrests</label>
             <br>
-            <input type="checkbox">:Politics &nbsp;&nbsp;&nbsp;&nbsp;
-            <input type="checkbox">:Cricket &nbsp;&nbsp;&nbsp;&nbsp;
-            <input type="checkbox">:Movies &nbsp;&nbsp;&nbsp;&nbsp;
-            <input type="checkbox">:Space &nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="checkbox" name="intr" value="pol">:Politics &nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="checkbox" name="intr" value="cric">:Cricket &nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="checkbox" name="intr" value="mov">:Movies &nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="checkbox" name="intr" value="space">:Space &nbsp;&nbsp;&nbsp;&nbsp;
             <br>
             <br>    
             <label>Nationality</label>
-            <select>
+            <select name="country">
                 <option>India</option>
                 <option>Srilanka</option>
                 <option>Pakistan</option>
@@ -54,7 +68,9 @@
             <br>
             <label>Address</label>
             <br>
-            <textarea></textarea>
+            <textarea name="addr"></textarea>
+            <br/>
+            <br/>
             <button>Register Here</button>
         </form>
     </body>
