--- a/position.html
+++ b/position.html
@@ -13,13 +13,31 @@
                 border: 1px solid;
                 background-color: green;
                 position: absolute;
-                bottom:0px;
-                right:0px;
+                top:50px;
+                left:50px;
+                z-index: -1;
+            }
+            #d3{
+                width:100px;
+                height:100px;
+                border:1px solid;
+                background-color: blue;
+                position: absolute;
+                top:100px;
+                left:100px;
+                z-index:-2
             }
         </style>
     </head>
     <body>
         <div id="d1"></div>
         <div id="d2"></div>
+        <div id="d3"></div>
     </body>
 </html>
+<!-- 
+    1. absolute
+    2. relative
+    3. fixed
+    4. sticky
+ -->
