--- a/inline-block.html
+++ b/inline-block.html
@@ -4,6 +4,8 @@
         <div style="border:1px solid;width: 300px;display: inline-block;">
             welcome to inline-block elements
         </div>
-        <b>Praveen Sir wants see you all in good companies</b>
+        <b>
+            Praveen Sir wants see you all in good companiesPraveen Sir wants see you all in good companiesPraveen Sir wants see you all in good companiesPraveen Sir wants see you all in good companiesPraveen Sir wants see you all in good companies
+        </b>
     </body>
 </html>
